--- a/app/src/main/res/layout/edit_bookmark.xml
+++ b/app/src/main/res/layout/edit_bookmark.xml
@@ -36,6 +36,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/bookmarkTitleHint"
+            android:textColor="?normalTextColor"
             android:inputType="text|textCapWords" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -54,6 +55,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/bookmarkUrlHint"
+            android:textColor="?normalTextColor"
             android:inputType="textUri" />
 
     </com.google.android.material.textfield.TextInputLayout>
