--- a/app/src/main/res/menu/menu_tab_switcher_activity.xml
+++ b/app/src/main/res/menu/menu_tab_switcher_activity.xml
@@ -21,7 +21,7 @@
 
     <item
         android:id="@+id/fire"
-        android:icon="@drawable/ic_fire_24dp"
+        android:icon="@drawable/ic_fire"
         android:title="@string/fireMenu"
         app:showAsAction="always" />
 
