--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -66,7 +66,8 @@
     <color name="whiteSix">#e5e5e5</color>
     <color name="pinkish_grey_two">#c0c0c0</color>
 
-    <color name="brickOrange">#d03a10</color>
+    <color name="brickOrangeLight">#CE2929</color>
+    <color name="brickOrangeDark">#FA5252</color>
 
     <color name="powderBlue">#50bfff</color>
     <color name="warmBlue">#3f66d5</color>
