changed text and icon colors in light and dark mode

--- a/app/src/main/res/layout/view_bookmark_entry.xml
+++ b/app/src/main/res/layout/view_bookmark_entry.xml
@@ -43,7 +43,7 @@
         android:layout_marginStart="22dp"
         android:fontFamily="sans-serif"
         android:paddingTop="4dp"
-        android:textColor="?attr/bookmarkTitleTextColor"
+        android:textColor="?attr/normalTextColor"
         android:textSize="16sp"
         android:textStyle="normal"
         app:layout_constraintBottom_toTopOf="@+id/url"
