--- a/app/src/main/res/color/browser_icon_color_selector_dark.xml
+++ b/app/src/main/res/color/browser_icon_color_selector_dark.xml
@@ -17,5 +17,5 @@
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_enabled="false" android:color="@color/midGray" />
-    <item android:color="@color/grayish"/>
+    <item android:color="@color/white"/>
 </selector>
