--- a/app/src/main/res/color/browser_icon_color_selector_light.xml
+++ b/app/src/main/res/color/browser_icon_color_selector_light.xml
@@ -17,5 +17,5 @@
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_enabled="false" android:color="@color/pinkish_grey_two" />
-    <item android:color="@color/grayishBrown"/>
+    <item android:color="@color/almostBlackDark"/>
 </selector>
