--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -110,47 +110,47 @@
     <style name="AppTheme.BaseLight">
         <item name="colorPrimary">@color/lightThemePrimary</item>
         <item name="colorPrimaryDark">@color/lightThemePrimaryDark</item>
-        <item name="daxLogoTextColor">@color/greyishBrownTwo</item>
-        <item name="normalTextColor">@color/grayishBrown</item>
-        <item name="toolbarIconColor">@color/grayishBrown</item>
-        <item name="toolbarTextColor">@color/grayishBrown</item>
+        <item name="daxLogoTextColor">@color/almostBlackDark</item>
+        <item name="normalTextColor">@color/almostBlackDark</item>
+        <item name="toolbarIconColor">@color/almostBlackDark</item>
+        <item name="toolbarTextColor">@color/almostBlackDark</item>
         <item name="browserIconColorSelector">@color/browser_icon_color_selector_light</item>
-        <item name="browserMenuTextColor">@color/brownishGrayTwo</item>
+        <item name="browserMenuTextColor">@color/almostBlackDark</item>
         <item name="browserMenuTextColorDisabled">@color/pinkish_grey_two</item>
         <item name="omnibarRoundedFieldBackgroundColor">@color/whiteFour</item>
-        <item name="omnibarTextColor">@color/brownishGrayTwo</item>
+        <item name="omnibarTextColor">@color/almostBlackDark</item>
         <item name="omnibarHintColor">@color/warmGray</item>
         <item name="omnibarLogoLetterTextColor">@color/whiteFour</item>
-        <item name="autoCompleteTextColor">@color/grayishBrown</item>
+        <item name="autoCompleteTextColor">@color/almostBlackDark</item>
         <item name="autoCompleteSubtitleTextColor">@color/warmerGray</item>
-        <item name="tabTitleTextColor">@color/almostBlack</item>
-        <item name="tabTitleTextColorLegacy">@color/almostBlack</item>
+        <item name="tabTitleTextColor">@color/almostBlackDark</item>
+        <item name="tabTitleTextColorLegacy">@color/almostBlackDark</item>
         <item name="tabSubtitleTextColor">@color/warmerGray</item>
         <item name="tabSelectedBorderColor">@color/cornflowerBlue</item>
         <item name="tabsFireTextColor">@color/warmerGray</item>
         <item name="tabCardBackgroundColor">@color/white</item>
-        <item name="bookmarkIconColor">@color/grayishBrown</item>
-        <item name="bookmarkTitleTextColor">@color/almostBlack</item>
+        <item name="bookmarkIconColor">@color/almostBlackDark</item>
+        <item name="bookmarkTitleTextColor">@color/almostBlackDark</item>
         <item name="bookmarkSubtitleTextColor">@color/warmerGray</item>
-        <item name="settingsItemTextColor">@color/grayishBrown</item>
+        <item name="settingsItemTextColor">@color/almostBlackDark</item>
         <item name="settingsItemTextColorDisabled">@color/pinkish_grey_two</item>
         <item name="settingsMinorTextColor">@color/warmerGray</item>
         <item name="settingsSwitchBackgroundColor">@color/brownishGrayTwo</item>
         <item name="settingsDividerColor">@color/whiteSix</item>
-        <item name="buttonOutlinedTextColor">@color/cornflowerDark</item>
+        <item name="buttonOutlinedTextColor">@color/cornflowerBlue</item>
         <item name="buttonOutlinedBorderColor">@color/grayishThree</item>
-        <item name="callToActionTitleColor">@color/almostBlack</item>
+        <item name="callToActionTitleColor">@color/almostBlackDark</item>
         <item name="callToActionSubtitleColor">@color/brownishGrayTwo</item>
         <item name="daxDialogBackgroundColor">@color/white</item>
-        <item name="daxDialogSecondaryButtonTextColor">@color/grayishBrown</item>
+        <item name="daxDialogSecondaryButtonTextColor">@color/almostBlackDark</item>
         <item name="daxDialogSecondaryButtonRippleColor">@color/subtleGrayTwo</item>
 
-        <item name="brokenSiteSelectionTextColor">@color/almostBlack</item>
+        <item name="brokenSiteSelectionTextColor">@color/almostBlackDark</item>
         <item name="brokenSiteOutlinedColor">@color/grayishTwo</item>
         <item name="brokenSitesButtonDisabledBackgroundColor">@color/subtleGrayTwo</item>
         <item name="brokenSitesButtonDisabledTextColor">@color/white</item>
         <item name="brokenSitesButtonRippleColor">@color/subtleGrayTwo</item>
-        <item name="topCallToActionDescriptionColor">@color/almostBlack</item>
+        <item name="topCallToActionDescriptionColor">@color/almostBlackDark</item>
         <item name="topCallToActionBackgroundColor">@color/white</item>
 
         <item name="feedbackAnonymousFeedbackLabelColor">@color/warmerGray</item>
