adding new colors for contrast

--- a/app/src/main/res/drawable/bottom_navigation_bar_bg.xml
+++ b/app/src/main/res/drawable/bottom_navigation_bar_bg.xml
@@ -49,7 +49,7 @@
     <item>
         <shape
             android:shape="rectangle">
-            <solid android:color="?attr/colorPrimary"/>
+            <solid android:color="?attr/toolbarBgColor"/>
         </shape>
     </item>
 </layer-list>
