--- a/app/src/main/res/layout/include_toolbar.xml
+++ b/app/src/main/res/layout/include_toolbar.xml
@@ -30,6 +30,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
+        android:background="?attr/toolbarBgColor"
         android:theme="@style/ToolbarTheme"
         app:popupTheme="@style/AppTheme.Dark.PopupOverlay" />
 
