--- a/app/src/main/res/drawable/popup_menu_bg.xml
+++ b/app/src/main/res/drawable/popup_menu_bg.xml
@@ -15,6 +15,6 @@
   -->
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="?attr/colorPrimary"/>
+    <solid android:color="?attr/dialogBgColor"/>
     <corners android:radius="8dp" />
 </shape>
