--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -18,8 +18,10 @@
 
     <attr name="daxLogoTextColor" format="color" />
     <attr name="normalTextColor" format="color" />
+    <attr name="dialogBgColor" format="color" />
     <attr name="toolbarIconColor" format="color" />
     <attr name="toolbarTextColor" format="color" />
+    <attr name="toolbarBgColor" format="color" />
     <attr name="browserIconColorSelector" format="color" />
     <attr name="browserMenuTextColor" format="color" />
     <attr name="browserMenuTextColorDisabled" format="color" />
