--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,11 +17,11 @@
 <resources>
 
     <!-- Dark theme primary colors -->
-    <color name="darkThemePrimaryDark">@color/almostBlackDark</color>
+    <color name="darkThemePrimaryDark">@color/black</color>
     <color name="darkThemePrimary">@color/almostBlack</color>
 
     <!-- Light theme primary colors -->
-    <color name="lightThemePrimaryDark">@color/whiteThree</color>
+    <color name="lightThemePrimaryDark">@color/white</color>
     <color name="lightThemePrimary">@color/whiteFive</color>
 
     <!-- Widget colors -->
@@ -43,6 +43,7 @@
     <color name="almostBlackDark">#222222</color>
     <color name="almostBlack">#333333</color>
     <color name="black">#000000</color>
+    <color name="newBlack">#111111</color>
 
     <color name="charcoalGrey">#383838</color>
     <color name="charcoalGreyTwoSemiTransparent">#d6333339</color>
@@ -56,7 +57,7 @@
     <color name="warGreyTwo">#888888</color>
     <color name="warmerGray">#777777</color>
     <color name="silver">#c0c2c9</color>
-    <color name="paleBrownishGray">#b0b0b0</color>
+    <color name="paleBrownishGray">#d0d0d0</color>
     <color name="brownishGray">#5c5c5c</color>
     <color name="brownishGrayTwo">#666666</color>
     <color name="pinkishGrayThree">#cccccc</color>
