--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -232,7 +232,7 @@
     </style>
 
     <style name="DaxAlertDialog" parent="ThemeOverlay.MaterialComponents.MaterialAlertDialog">
-        <item name="android:background">@drawable/popup_menu_bg</item>
+        <item name="android:background">?dialogBgColor</item>
         <item name="colorOnSurface">?normalTextColor</item>
         <item name="buttonBarPositiveButtonStyle">@style/DaxDialogPositiveButton</item>
         <item name="buttonBarNegativeButtonStyle">@style/DaxDialogNegativeButton</item>
