updated bg color in fire dialog

--- a/app/src/main/res/layout/sheet_fire_clear_data.xml
+++ b/app/src/main/res/layout/sheet_fire_clear_data.xml
@@ -19,7 +19,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="?colorPrimary"
+    android:background="?dialogBgColor"
     app:layout_behavior="@string/bottom_sheet_behavior">
 
     <TextView
