Update privacy toggle to be per site (#811)
* Adds user whitelisting functionality and a whitelist management screen to the application
* Updates the privacy toggle to be per site rather than global, adding sites to the whitelist when toggled on
* Updates the privacy toggle to also control https upgrade behavior
* Adds "Manage Whitelist" and "Report Broken Site" buttons to the Privacy Dashboard
* Adds "Add to Whitelist" or "Remove from Whitelist" option, as applicable, to our Browser menu

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -55,6 +55,7 @@
         <item name="tabSelectedBorderColor">@color/skyBlue</item>
         <item name="tabsFireTextColor">@color/white</item>
         <item name="tabCardBackgroundColor">@color/almostBlack</item>
+        <item name="whitelistTextColor">@color/white</item>
         <item name="bookmarkIconColor">@color/white</item>
         <item name="bookmarkTitleTextColor">@color/white</item>
         <item name="bookmarkSubtitleTextColor">@color/grayishTwo</item>
@@ -128,6 +129,7 @@
         <item name="tabSelectedBorderColor">@color/cornflowerBlue</item>
         <item name="tabsFireTextColor">@color/warmerGray</item>
         <item name="tabCardBackgroundColor">@color/white</item>
+        <item name="whitelistTextColor">@color/almostBlack</item>
         <item name="bookmarkIconColor">@color/grayishBrown</item>
         <item name="bookmarkTitleTextColor">@color/almostBlack</item>
         <item name="bookmarkSubtitleTextColor">@color/warmerGray</item>
