--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -35,6 +35,7 @@
     <attr name="tabSelectedBorderColor" format="color" />
     <attr name="tabsFireTextColor" format="color" />
     <attr name="tabCardBackgroundColor" format="color" />
+    <attr name="whitelistTextColor" format="color" />
     <attr name="bookmarkIconColor" format="color" />
     <attr name="bookmarkTitleTextColor" format="color" />
     <attr name="bookmarkSubtitleTextColor" format="color" />
