--- a/app/src/main/res/layout/view_fireproof_website_empty_hint.xml
+++ b/app/src/main/res/layout/view_fireproof_website_empty_hint.xml
@@ -18,18 +18,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="16dp">
+    android:paddingTop="24dp"
+    android:paddingStart="16dp"
+    android:paddingEnd="16dp"
+    android:paddingBottom="24dp">
 
     <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/fireproofWebsiteDescription"
+        android:id="@+id/fireproofWebsiteEmptyHint"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif"
         android:lineSpacingExtra="4sp"
-        android:textColor="?attr/settingsMinorTextColor"
-        android:textSize="14sp"
+        android:gravity="center"
+        android:textColor="?attr/fireproofWebsiteTitleTextColor"
+        android:textSize="16sp"
         android:textStyle="normal"
-        android:justificationMode="inter_word"
-        android:text="@string/fireproofWebsiteFeatureDescription"
+        android:text="@string/fireproofWebsiteEmptyListHint"
         tools:text="Lorem ipsum dolor sit amet" />
 </LinearLayout>
