Android: Site-level "fireproof" feature to preserve logins (#829)
* Fireproof websites UI (#796)

* Create new database table to persist sites where cookies should be preserved

* Removed divider from bookmarks list

* bookmarks title show in single line

* background favicon compatible with dark theme

* introduce fireproof site option menu

* Fireproof option menu reacts to database state.

* Fireproof website screen created

* Remove cookies preserving fireproof websites (#808)

* Implement logic to remove cookies preserving the ones related to fireproof website.

- Try to directly remove cookies from WebView database, preserving the ones with hosts related to a fireproof website
- If process fails, fallback to remove all the cookies to avoid any leak
- Send pixels in the following scenarios:
- database path not found
- database can't be opened
- delete query fails
- database corruption

* Fireproof websites empty state and Feature pixels (#810)

* Empty state for fireproof websites screen
* Feature pixels
- User clicks on "fireproof a website"
- User undo "fireproof website" action (confirmation snackbar after fireproffing a website)
- User removed a website from "fireproof websites"

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -37,6 +37,7 @@
     <attr name="tabCardBackgroundColor" format="color" />
     <attr name="whitelistTextColor" format="color" />
     <attr name="bookmarkIconColor" format="color" />
+    <attr name="websiteListFaviconBackground" format="color" />
     <attr name="bookmarkTitleTextColor" format="color" />
     <attr name="bookmarkSubtitleTextColor" format="color" />
     <attr name="settingsItemTextColor" format="color" />
@@ -64,6 +65,7 @@
     <attr name="topCallToActionDescriptionColor" format="color" />
     <attr name="topCallToActionBackgroundColor" format="color" />
     <attr name="privacyDashboardLogoLetterTextColor" format="color" />
+    <attr name="fireproofWebsiteTitleTextColor" format="color" />
 
     <declare-styleable name="BottomNavigationBar">
         <attr name="layoutResource" format="reference" />
