--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -57,7 +57,9 @@
         <item name="tabCardBackgroundColor">@color/almostBlack</item>
         <item name="whitelistTextColor">@color/white</item>
         <item name="bookmarkIconColor">@color/white</item>
+        <item name="websiteListFaviconBackground">@color/almostBlack</item>
         <item name="bookmarkTitleTextColor">@color/white</item>
+        <item name="fireproofWebsiteTitleTextColor">@color/white</item>
         <item name="bookmarkSubtitleTextColor">@color/grayishTwo</item>
         <item name="settingsItemTextColor">@color/white</item>
         <item name="settingsItemTextColorDisabled">@color/midGray</item>
@@ -131,7 +133,9 @@
         <item name="tabCardBackgroundColor">@color/white</item>
         <item name="whitelistTextColor">@color/almostBlack</item>
         <item name="bookmarkIconColor">@color/grayishBrown</item>
+        <item name="websiteListFaviconBackground">@color/whiteSix</item>
         <item name="bookmarkTitleTextColor">@color/almostBlack</item>
+        <item name="fireproofWebsiteTitleTextColor">@color/almostBlack</item>
         <item name="bookmarkSubtitleTextColor">@color/warmerGray</item>
         <item name="settingsItemTextColor">@color/grayishBrown</item>
         <item name="settingsItemTextColorDisabled">@color/pinkish_grey_two</item>
