--- a/app/src/main/res/layout/fragment_browser_tab.xml
+++ b/app/src/main/res/layout/fragment_browser_tab.xml
@@ -61,8 +61,8 @@
         android:id="@+id/autoCompleteSuggestionsList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
-        android:backgroundTint="?attr/colorPrimary"
+        android:background="?toolbarBgColor"
+        android:backgroundTint="?toolbarBgColor"
         android:clipToPadding="false"
         android:elevation="4dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
