final tweaks to the toolbar, removing elevation and adding custom shadow

--- a/app/src/main/res/layout/include_toolbar.xml
+++ b/app/src/main/res/layout/include_toolbar.xml
@@ -24,6 +24,8 @@
     android:layout_height="wrap_content"
     android:id="@+id/appBarLayout"
     android:theme="@style/AppTheme.Dark.AppBarOverlay"
+    android:background="@drawable/appbar_bg"
+    app:elevation="0dp"
     tools:showIn="@layout/activity_tracker_networks">
 
     <androidx.appcompat.widget.Toolbar
