--- a/app/src/main/res/drawable/appbar_bg.xml
+++ b/app/src/main/res/drawable/appbar_bg.xml
@@ -17,15 +17,15 @@
 
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
-        <shape android:shape="rectangle">
-            <padding android:top="1dp"/>
-            <solid android:color="?attr/toolbarBgBorderColor" />
-        </shape>
-    </item>
-    <item>
         <shape
             android:shape="rectangle">
             <solid android:color="?attr/toolbarBgColor"/>
+        </shape>
+    </item>
+    <item>
+        <shape android:shape="rectangle">
+            <padding android:bottom="1dp"/>
+            <solid android:color="?toolbarBgBorderColor" />
         </shape>
     </item>
 </layer-list>
