--- a/app/src/main/res/layout/include_omnibar_toolbar.xml
+++ b/app/src/main/res/layout/include_omnibar_toolbar.xml
@@ -27,7 +27,9 @@
         android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:theme="@style/AppTheme.Dark.AppBarOverlay">
+        android:theme="@style/AppTheme.Dark.AppBarOverlay"
+        android:background="@drawable/appbar_bg"
+        app:elevation="0dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/toolbarContainer"
@@ -48,95 +50,95 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:popupTheme="@style/AppTheme.Dark.PopupOverlay">
 
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/omniBarContainer"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="8dp"
+                    android:background="@drawable/omnibar_field_background"
+                    android:paddingStart="6dp"
+                    android:paddingEnd="6dp">
+
                     <androidx.constraintlayout.widget.ConstraintLayout
-                        android:id="@+id/omniBarContainer"
-                        android:layout_width="match_parent"
+                        android:id="@+id/networksContainer"
+                        android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:layout_margin="8dp"
-                        android:background="@drawable/omnibar_field_background"
-                        android:paddingStart="6dp"
-                        android:paddingEnd="6dp">
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent" />
 
-                        <androidx.constraintlayout.widget.ConstraintLayout
-                            android:id="@+id/networksContainer"
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintStart_toStartOf="parent" />
+                    <FrameLayout
+                        android:id="@+id/omnibarIconContainer"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent">
 
-                        <FrameLayout
-                            android:id="@+id/omnibarIconContainer"
+                        <ImageButton
+                            android:id="@+id/privacyGradeButton"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:background="?attr/selectableItemBackgroundBorderless"
+                            android:contentDescription="@string/privacyGradeContentDescription"
+                            android:padding="4dp"
+                            android:src="@drawable/privacygrade_icon_a"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent">
-
-                            <ImageButton
-                                android:id="@+id/privacyGradeButton"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:background="?attr/selectableItemBackgroundBorderless"
-                                android:contentDescription="@string/privacyGradeContentDescription"
-                                android:padding="4dp"
-                                android:src="@drawable/privacygrade_icon_a"
-                                app:layout_constraintBottom_toBottomOf="parent"
-                                app:layout_constraintStart_toStartOf="parent"
-                                app:layout_constraintTop_toTopOf="parent" />
-
-                            <ImageView
-                                android:id="@+id/searchIcon"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:contentDescription="@string/privacyGradeContentDescription"
-                                android:padding="4dp"
-                                android:src="@drawable/ic_loupe_24dp"
-                                app:layout_constraintBottom_toBottomOf="parent"
-                                app:layout_constraintStart_toStartOf="parent"
-                                app:layout_constraintTop_toTopOf="parent" />
-
-                        </FrameLayout>
-
-                        <com.duckduckgo.app.browser.omnibar.KeyboardAwareEditText
-                            android:id="@+id/omnibarTextInput"
-                            style="@style/Base.V7.Widget.AppCompat.EditText"
-                            android:layout_width="0dp"
-                            android:layout_height="0dp"
-                            android:background="@null"
-                            android:fontFamily="sans-serif"
-                            android:hint="@string/omnibarInputHint"
-                            android:imeOptions="flagNoExtractUi|actionGo|flagNoPersonalizedLearning"
-                            android:inputType="textUri|textNoSuggestions"
-                            android:maxLines="1"
-                            android:paddingStart="5dp"
-                            android:paddingEnd="8dp"
-                            android:selectAllOnFocus="true"
-                            android:textColor="?attr/omnibarTextColor"
-                            android:textColorHint="?attr/omnibarHintColor"
-                            android:textCursorDrawable="@drawable/text_cursor"
-                            android:textSize="16sp"
-                            android:textStyle="normal"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toStartOf="@id/clearTextButton"
-                            app:layout_constraintStart_toEndOf="@id/omnibarIconContainer"
-                            app:layout_constraintTop_toTopOf="parent"
-                            tools:text="https://duckduckgo.com/?q=areallylongexampleexample" />
+                            app:layout_constraintTop_toTopOf="parent" />
 
                         <ImageView
-                            android:id="@+id/clearTextButton"
+                            android:id="@+id/searchIcon"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:background="?selectableItemBackground"
-                            android:contentDescription="@string/clearButtonContentDescription"
-                            android:padding="3dp"
-                            android:src="@drawable/ic_close"
-                            android:visibility="gone"
+                            android:contentDescription="@string/privacyGradeContentDescription"
+                            android:padding="4dp"
+                            android:src="@drawable/ic_loupe_24dp"
                             app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintTop_toTopOf="parent"
-                            tools:visibility="visible" />
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
 
-                    </androidx.constraintlayout.widget.ConstraintLayout>
+                    </FrameLayout>
+
+                    <com.duckduckgo.app.browser.omnibar.KeyboardAwareEditText
+                        android:id="@+id/omnibarTextInput"
+                        style="@style/Base.V7.Widget.AppCompat.EditText"
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:background="@null"
+                        android:fontFamily="sans-serif"
+                        android:hint="@string/omnibarInputHint"
+                        android:imeOptions="flagNoExtractUi|actionGo|flagNoPersonalizedLearning"
+                        android:inputType="textUri|textNoSuggestions"
+                        android:maxLines="1"
+                        android:paddingStart="5dp"
+                        android:paddingEnd="8dp"
+                        android:selectAllOnFocus="true"
+                        android:textColor="?attr/omnibarTextColor"
+                        android:textColorHint="?attr/omnibarHintColor"
+                        android:textCursorDrawable="@drawable/text_cursor"
+                        android:textSize="16sp"
+                        android:textStyle="normal"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toStartOf="@id/clearTextButton"
+                        app:layout_constraintStart_toEndOf="@id/omnibarIconContainer"
+                        app:layout_constraintTop_toTopOf="parent"
+                        tools:text="https://duckduckgo.com/?q=areallylongexampleexample" />
+
+                    <ImageView
+                        android:id="@+id/clearTextButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="?selectableItemBackground"
+                        android:contentDescription="@string/clearButtonContentDescription"
+                        android:padding="3dp"
+                        android:src="@drawable/ic_close"
+                        android:visibility="gone"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        tools:visibility="visible" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
             </androidx.appcompat.widget.Toolbar>
 
@@ -205,12 +207,12 @@
                 style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="4dp"
+                android:progressDrawable="@drawable/loading_progress"
                 android:visibility="invisible"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 tools:progress="50"
-                android:progressDrawable="@drawable/loading_progress"
                 tools:visibility="visible" />
 
             <include
