--- a/app/src/main/res/layout/activity_tab_switcher_bottom_bar_feature.xml
+++ b/app/src/main/res/layout/activity_tab_switcher_bottom_bar_feature.xml
@@ -46,7 +46,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/bottomBarHeight"
         android:layout_gravity="bottom"
-        android:background="@drawable/bottom_navigation_bar_bg"
+        android:background="?toolbarBgColor"
         android:gravity="center"
         android:orientation="horizontal"
         android:elevation="8dp"
