more cleanup reveryting changes

--- a/app/src/main/res/layout/sheet_fire_clear_data.xml
+++ b/app/src/main/res/layout/sheet_fire_clear_data.xml
@@ -56,7 +56,7 @@
         android:paddingEnd="24dp"
         android:paddingBottom="24dp"
         android:text="@string/fireCancel"
-        android:textColor="?normalTextColor"
+        android:textColor="@color/brownishGray"
         android:textSize="16sp"
         android:textStyle="normal"
         app:layout_constraintEnd_toEndOf="parent"
